# manga-zip-translator

./: README.md  README_zh-CN.md  manga-zip-translate.json  openapi.json  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/scriptlets/: +scriptlet#1.py
oo-locales/: en.json  zh-CN.json
subflows/file-zip-translator/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/url-zip-translator/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/zip-translator/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/check-zip-format/: __init__.py  task.oo.yaml
tasks/manga-zip-translate/: __init__.py  task.oo.yaml
