[project]
name = "manga-zip-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "leavesster",email = "11785335+leavesster@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "manga_zip_translator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
